Fixed side bar not displayed on mobile view and also hide the vertical scroll bar in left nav

--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,6 @@ input[type="checkbox"]:checked + .slider {
 input[type="checkbox"]:checked + .slider::after {
     transform: translateX(20px);
 }
+.left-nav::-webkit-scrollbar {
+    display: none;
+}
